# Young_scientists_international_hack

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile  nginx.conf  pyproject.toml
app/: config.py  main.py
app/api/v1/endpoints/: certificates.py  participants.py  templates.py
app/schemas/: certificate.py  participant.py  template.py
app/services/: certificate_service.py  email_service.py  participant_service.py  template_service.py
app/storage/: minio_storage.py  redis_storage.py
app/tasks/: celery_app.py
app/utils/: exceptions.py  file_parser.py  pdf_generator.py  validators.py
data/templates/: 2d9111ae-ce4.html  392db0da-b26c-401a-84bb-07576614f0de.html  40fe7a5e-6a2b-4a55-9259-24c8c7acb879.html  6b8b019b-1ff9-4d78-9a93-84ecd6b53b0a.html  6fa36b55-8ec9-40b5-883e-d7486ba48766.html  7a644c5e-b5ab-4e75-ad18-edb6ba33085f.html  a5ee29ff-4e39-4065-b8f6-58757981a74d.html  ade79159-d8e0-4375-a2af-c6571e51dcae.html  c7ee7383-2bc1-4177-a9d8-5572c9a43a7b.html  cd477bc0-438d-4f6e-8337-eb5bbb1ca29e.html  febc2f54-b5a.html
data/templates/2a1124d0-d33/: certificate_cyrillic_FIXED.html
data/templates/3ca33aa5-40c/: template.html
docker/frontend/: Dockerfile  default.conf
frontend/: README.md  example_participants.csv  index.html  package-lock.json  package.json
frontend/guidelines/: Icons.tsx  ParticipantUpload.tsx
frontend/js/: api.js  app.js  generate.js  pdf-viewer.js  state.js  tabs.js  templates.js  ui.js  upload.js
frontend/styles/: styles.css
