# pyproject.toml

[tool.poetry]
name = "certificate-service"
version = "0.1.0"
description = "Certificate generation service for Sirius federal territory"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Data processing
pandas = "^2.1.0"
openpyxl = "^3.1.0"
python-multipart = "^0.0.6"

# PDF Generation
weasyprint = "^60.0"
pillow = "^10.1.0"
pypdf = "^3.17.0"
jinja2 = "^3.1.0"

# Redis & Caching
redis = "^5.0.0"
aioredis = "^2.0.0"

# Background Tasks
celery = "^5.3.0"

# Email
aiosmtplib = "^3.0.0"
email-validator = "^2.1.0"

# Utilities
python-dotenv = "^1.0.0"
python-slugify = "^8.0.0"
setuptools = "^80.9.0"
reportlab = "^4.4.5"
minio = "^7.2.20"
xhtml2pdf = "^0.2.17"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
httpx = "^0.25.0"
black = "^23.12.0"
ruff = "^0.1.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"